# Reinforcement-Learning

./: README.md  main.py  pyproject.toml
Anteproyecto/: Anteproyecto.ipynb  Prueba.ipynb  Test.ipynb  anteproyecto.ipynb  pesca_1D_env.py  tareaAnteproyecto.py
Anteproyecto/.ipynb_checkpoints/: Anteproyecto-checkpoint.ipynb  anteproyecto-checkpoint.ipynb  tareaAnteproyecto-checkpoint.py
Proyecto/: Cluster.py  Cluster_RecPPO.py  Proyecto.ipynb  anteproyecto.ipynb  estudio2D.ipynb  estudio4D.ipynb  pesca_2D_env.py  pesca_env.py  pesca_env_1obs.py  pesca_env_4obs.py  proyecto.ipynb  resultados_rewards.txt  run_RecPPO.sh
Proyecto/.ipynb_checkpoints/: Proyecto-checkpoint.ipynb  estudio2D-checkpoint.ipynb  estudio4D-checkpoint.ipynb  estudio4D_old-checkpoint.ipynb  pesca_2D_env-checkpoint.py  pesca_env-checkpoint.py
Proyecto/Archivos_Cluster/: enviroment.yml
Proyecto/Archivos_Cluster/PPO_1Pobl/: run_PPO.sh
Proyecto/Archivos_Cluster/PPO_4Pobl/: Cluster_PPO4.py
Proyecto/Archivos_Cluster/RecPPO_1Pobl/: pesca_env.py
Proyecto/PPO/: Cluster_PPO.py
Proyecto/PPO_4/: pesca_env2.py  run_PPO4.sh
